tests/baselines/reference/noUnusedLocals_destructuringAssignment.errors.txt
noUnusedLocals_destructuringAssignment.ts(10,13): error TS6133: 'f' is declared but its value is never read.


==== noUnusedLocals_destructuringAssignment.ts (1 errors) ====
    class C {
        private x = 0;
    
        m(): number {
            let x: number;
            ({ x } = this);
            return x;
        }
    
        private f(): Function {
                ~
!!! error TS6133: 'f' is declared but its value is never read.
            let f: Function;
            ({ f } = this);
            return f;
        }
    }
    